--- a/vazifa/css/style.css
+++ b/vazifa/css/style.css
@@ -410,7 +410,7 @@
         font-weight: bold;
         font-size: 12px;
         line-height: 16px;
-        color: #FFFFFF;
+        color: #fff;
     }
 
     #internal_country-about {
